--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dependencies:
   dio: ^4.0.0
   flutter_polyline_points: ^0.2.6
   google_maps_flutter: ^2.0.2
+  percent_indicator:
   location:
+  syncfusion_flutter_gauges:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
