--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,17 @@ dependencies:
   flutter:
     sdk: flutter
   custom_navigation_bar:
-  dio: ^4.0.0
-  flutter_polyline_points: ^0.2.6
-  google_maps_flutter: ^2.0.2
+  dio:
+  flutter_polyline_points:
+  google_maps_flutter:
   percent_indicator:
   location:
   syncfusion_flutter_gauges:
+  firebase_core:
+  firebase_auth:
+  flutter_signin_button:
+  google_sign_in:
+#  flutter_facebook_auth:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
