--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ dependencies:
   percent_indicator:
   location:
   syncfusion_flutter_gauges:
-  firebase_core:
-  firebase_auth:
+  firebase_core: ^1.2.0
+  firebase_auth: ^1.2.0
   flutter_signin_button:
   google_sign_in:
   cloud_firestore:
