--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,20 +23,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  custom_navigation_bar:
-  dio:
-  flutter_polyline_points:
-  google_maps_flutter:
-  percent_indicator:
-  location:
-  syncfusion_flutter_gauges:
-  firebase_core: ^1.2.0
-  firebase_auth: ^1.2.0
-  flutter_signin_button:
-  google_sign_in:
-  cloud_firestore:
-  database:
-  search:
+  custom_navigation_bar: ^0.8.1
+  dio: ^4.0.0
+  flutter_polyline_points: ^1.0.0
+  google_maps_flutter: ^2.0.6
+  percent_indicator: ^3.0.1
+  location: ^4.1.1
+  syncfusion_flutter_gauges: ^19.1.66
+  firebase_core: ^1.2.1
+  firebase_auth: ^1.3.0
+  flutter_signin_button: ^2.0.0
+  google_sign_in: ^5.0.4
+  cloud_firestore: ^2.2.1
+  path_provider: ^2.0.2
+  animated_splash_screen: ^1.1.0
+  page_transition:
+  custom_splash_screen:
+  flutter_slidable: ^0.6.0
 #  flutter_facebook_auth:
 
   # The following adds the Cupertino Icons font to your application.
